# realestateparser

./: .~lock.1_test_analitic_avito_dataset_2_pages.csv#  .~lock.analitic_avito_dataset_50_pages.csv#  .~lock.analitic_avito_dataset_50_pages.xlsx#  .~lock.cian_data.csv#  111avito_data.csv  111avito_data.ods  1_test_analitic_avito_dataset_2_pages.csv  25_02_avito_parser_1_pages.csv  25_02_avito_parser_2_pages.csv  25_02_avito_parser_3_pages.csv  25_02_avito_parser_4_pages.csv  25_02_avito_parser_5_pages.csv  26_02_avito_parser_40_pages.csv  README.md  analitic_avito_dataset_5_pages.csv  analitic_script.py  analitic_script_2.ipynb  analitic_script_5lr.ipynb  avito_analitic_parser.py  avito_data.csv  avito_data_10_pages.csv  avito_data_15_pages.csv  avito_data_20_pages.csv  avito_data_25_pages.csv  avito_data_30_pages.csv  avito_data_35_pages.csv  avito_data_5_pages.csv  avito_parser.py  cian_data.csv  main.py  pyproject.toml  test.py  test_analitic_avito_dataset_2_pages.csv
src/: .~lock.analitic_avito_dataset_50_pages.xlsx#  analitic_avito_dataset_50_pages.csv  analitic_avito_dataset_50_pages.xlsx  analitic_script.ipynb  analitic_script.py  analitic_script_2.ipynb  analitic_script_3lr.ipynb  analitic_script_4lr.ipynb  avito_analitic_parser.py  avito_parser.py  cian_parser.py  main.py
tests/: test_analitic_script.py
